# auto-file-sorter

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  dev-requirements.txt  example_configs.json  pyproject.toml  requirements-dev.txt  requirements.txt  settings_template.json  setup.py  tox.ini
.github/workflows/: codeql.yaml  publish-to-pypi.yaml  pylint.yaml  pylint.yml  pypi-to-upload.yaml  tests.yaml  upload-to-pypi.yaml
auto_file_sorter/: __init__.py  args_handling.py  configs_handling.py  constants.py  event_handling.py  main.py  utils.py
scripts/: __init__.py  event_handler.py  extensions.py  main.py  settings.json
scripts/utils/: __init__.py  event_handler.py  helper_funcs.py  settings_handler.py
src/auto-file-sorter/: __main__.py  event_handler.py  json_handler.py  settings.json
src/auto-file-sorter/utils/: event_handler.py  helper_funcs.py  settings_handler.py
src/auto_file_sorter/: __init__.py  __main__.py  args_handling.py  configs_handling.py  constants.py  event_handler.py  event_handling.py  json_reader.py  main.py
src/file-sorter/: __main__.py  settings.json
src/file-sorter/utils/: __init__.py  event_handler.py  settings_handler.py
stubs/setuptools/: __init__.pyi
stubs/watchdog/: events.pyi
stubs/watchdog/observers/: __init__.pyi  api.pyi
stubs/watchdog/utils/: __init__.pyi
subs/watchdog/: events.pyi
subs/watchdog/observers/: api.pyi
tests/: __init__.py  args_handling_test.py  configs_handling_test.py  constants_test.py  event_handling_test.py  fixtures.py  main_test.py  module_level_dunder_names_test.py  test_args_handling.py  test_configs_handling.py  test_constants.py  test_event_handling.py  test_module_level_dunder_names.py  utils_test.py
