[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-file-sorter"
version = "2.0"
description = "A file sorting automation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "realshouzy" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
requires-python = ">=3.11"
dependencies = ["watchdog"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "stubs"
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true
show_error_codes = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_return_any = true
strict_equality = true
no_implicit_reexport = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.ruff]
extend-select = [
    "F",
    "A",
    "B",
    "INP",
    "I",
    "PYI",
    "RSE",
    "RET",
    "Q",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "ARG",
    "PL",
    "RUF",
    "C4",
    "G",
    "COM",
    "BLE",
    "FBT"
]
ignore = [
    "E501",
    "BLE001",
    "INP001"
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
show-fixes = true
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "pep257"
