[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-file-sorter"
description = "A file sorting automation"
keywords = ["automation", "file", "sorter", "auto", "watchdog"]
license = {text = "MIT"}
authors = [{name = "realshouzy"}]
maintainers = [{name = "realshouzy"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.8"
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = "https://github.com/realshouzy/auto-file-sorter"
Repository = "https://github.com/realshouzy/auto-file-sorter"
Documentation = "https://github.com/realshouzy/auto-file-sorter/blob/main/README.md#documentation"
Changelog = "https://github.com/realshouzy/auto-file-sorter/commits/"

[project.optional-dependencies]
dev = ["mypy", "ruff", "pylint", "black", "isort"]

[project.scripts]
auto-file-sorter = "auto_file_sorter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "auto_file_sorter.__version__"}
readme = {file = ["README.md"]}
dependencies = {file = "requirements.txt"}

[tool.black]
target-version = ["py311", "py310", "py39", "py38"]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "stubs"
strict = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
show_error_codes = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
warn_return_any = true
strict_equality = true
no_implicit_reexport = true
no_implicit_optional = true
warn_unused_ignores = true
no_namespace_packages = true
disable_error_code = ["no-redef"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",
    "BLE001",
    "INP001",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PGH003",
    "ANN101",
    "D107",
    "D105",
    "C901",
    "T201",
    "D205",
    "DTZ005",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
show-fixes = true
target-version = "py311"
line-length = 88

[tool.ruff.per-file-ignores]
"*.pyi" = [
    "A002",
    "ANN401",
    "D100",
    "D101",
    "D102",
    "D103",
    "FBT001",
    "FBT002",
    "PLR0913",
]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.pylint]
disable = [
    "R0911",
    "R0912",
    "R0915",
    "W0718",
]
